--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,1 +1,12 @@
-<p>todo works!</p>
+<div class="h-full flex flex-col">
+  <form class="mx-auto w-1/3" [formGroup]="form" (ngSubmit)="submitForm()">
+    <mat-form-field class="mt-16 w-full" appearance="outline">
+      <mat-label>Task name</mat-label>
+      <input matInput placeholder="Task name ..." formControlName="todoName" />
+    </mat-form-field>
+    <button class="hidden" type="submit"></button>
+  </form>
+  <div class="mt-8 mx-auto w-1/3">
+    <app-todo-card></app-todo-card>
+  </div>
+</div>
