--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -6,7 +6,10 @@
     </mat-form-field>
     <button class="hidden" type="submit"></button>
   </form>
-  <div class="mt-8 mx-auto w-1/3">
-    <app-todo-card></app-todo-card>
+  <div class="flex flex-col h-full mt-8 mx-auto w-1/3 gap-y-2">
+    <app-todo-card
+      *ngFor="let item of todoList$ | async"
+      [config]="item"
+    ></app-todo-card>
   </div>
 </div>
